--- a/tribute.html
+++ b/tribute.html
@@ -78,7 +78,7 @@
         <strong><p style="font-size: 20px;font-style: italic; text-align: center;">"The farmer is the only man in our economy who buys everything at retail, sells everything at wholesale, and pays the freight both ways.-John F kennedy"</strong></p>
          </div>
     <figure class="fig1">
-        <img src="./indian-farmer-1610471656527.webp" height="300px" width="100%">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Findian-farmer&psig=AOvVaw3qk3_QzeE0nAFbmCJD1Cu2&ust=1721059102995000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCICRzvjypocDFQAAAAAdAAAAABAE" height="300px" width="100%">
     </figure>
     <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/e0TyEZd6NZ0?si=DEcvjZFRtomJi0qZ?autoplay=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
